# calenhad_archive

./: .gitignore  CMakeLists.txt  CalenhadServices.cpp  CalenhadServices.h  LegendRoster.cpp  LegendRoster.h  LegendService.h  MessageService.h  PreferencesService.h  ProjectionService.cpp  ProjectionService.h  README.md  Serializable.h  StatisticsService.cpp  StatisticsService.h  about.txt  cudatest.cu  cudatest.h  geoutils.cpp  geoutils.h  main.cpp  matrices.cpp  matrices.h  messagefactory.cpp  messagefactory.h  noiseconstants.h  preferences.cpp  preferences.h
messages/: CMakeLists.txt  QNotification.cpp  QNotification.h  QNotificationFactory.cpp  QNotificationFactory.h  QNotificationHost.cpp  QNotificationHost.h  QNotificationService.h  QNotificationStack.cpp  QNotificationStack.h  QProgressNotification.cpp  QProgressNotification.h
src/: CMakeLists.txt  CalenhadServices.cpp  CalenhadServices.h  CalenhadUi.cpp  CalenhadUi.h  Interpolation.h  geoutils.cpp  geoutils.h  main.cpp  matrices.cpp
src/actions/: ContextAction.h  GridCommand.cpp  GridCommand.h  SnapToGridCommand.cpp  SnapToGridCommand.h  XmlCommand.cpp  XmlCommand.h  ZoomCommand.cpp  ZoomCommand.h
src/config/: calenhad.conf  darkorange.css  test.xml  webapp1.ini
src/config/modules/: modules.xml
src/controls/: CMakeLists.txt  CalenhadLegendDialog.cpp  CalenhadLegendDialog.h  ColorButton.h  CubeRasterWidget.cpp  CubeRasterWidget.h  FlowLayout.cpp  FlowLayout.h  ModuleTree.cpp  ModuleTree.h  QAngleControl.cpp  QAngleControl.h  QIconPalette.cpp  QIconPalette.h  SizeGripItem.cpp  SizeGripItem.h  SpinBoxDelegate.cpp  SpinBoxDelegate.h  SplashDialog.cpp  TextEdit.cpp
src/controls/altitudemap/: AltitudeMapConstants.h  AltitudeMapEditor.cpp  AltitudeMapEditor.h  AltitudeMapFitter.cpp  AltitudeMapFitter.h  AltitudeMapPlot.cpp  AltitudeMapPlot.h  AltitudeMapping.cpp  CMakeLists.txt  CubicSplineFitter.cpp  CubicSplineFitter.h  TerraceMapFitter.cpp
src/controls/globe/: CMakeLists.txt  CalenhadGlobeConfigDialog.cpp  CalenhadGlobeConfigDialog.h  CalenhadGlobeConstants.h  CalenhadGlobeContextMenu.cpp  CalenhadGlobeContextMenu.h  CalenhadGlobeDialog.cpp  CalenhadGlobeDialog.h  CalenhadGlobeWidget.cpp  CalenhadGlobeWidget.h  CalenhadNavigator.cpp  CalenhadStatistics.h  CalenhadStatsPanel.cpp  CalenhadStatsPanel.h  GlobeScaleWidget.cpp  GlobeScaleWidget.h  HypsographyWidget.cpp  HypsographyWidget.h  StatisticsService.h
src/controls/legend/: LegendEditor.cpp  LegendEditor.h  LegendEditorScale.cpp  LegendEditorScale.h  LegendEditorSlider.cpp  LegendEditorSliderPanel.cpp  LegendEditorSliderPanel.h  LegendEntryDialog.cpp  (+3 more)
src/exprtk/: Calculator.cpp  Calculator.h  ExpressionEdit.cpp  ExpressionEdit.h  ExpressionWidget.cpp  VariablesDialog.cpp  VariablesDialog.h  exprtk.hpp
src/gis/: CMakeLists.txt  GisGlobeDialog.cpp  GisGlobeDialog.h  GisGlobeWidget.cpp  GisGlobeWidget.h
src/graph/: CMakeLists.txt  ComputeService.cpp  ComputeService.h  graph.cpp  graph.h
src/grid/: CMakeLists.txt  CubicSphere.cpp  CubicSphere.h  Extent.cpp  Extent.h  FractalGrid.cpp  FractalGrid.h  Geometry.h  IcosphereDivider.cpp  Tectonics.cpp  Tectonics.h  Vertex.cpp  Vertex.h  icosphere.cpp  icosphere.h
src/icosphere/: Bounds.cpp  Bounds.h  CMakeLists.txt  CubicSphere.h  IcosphereDivider.cpp
src/legend/: CMakeLists.txt  Legend.cpp  Legend.h  LegendChooser.cpp  LegendChooser.h  LegendEntry.cpp  LegendEntry.h  LegendManager.cpp  LegendRoster.cpp  LegendRoster.h  LegendService.h  LegendWidget.cpp  LegendWidget.h  QColorButton.h
src/libnoiseutils/: CMakeLists.txt  Interpolation.h  NoiseMap.cpp  NoiseMap.h  NoiseMapBuilder.cpp  NoiseMapBuilder.h  NoiseMapBuilderCylinder.cpp  NoiseMapBuilderCylinder.h  NoiseMapBuilderIcosphere.h  NoiseMapBuilderPlane.h  NoiseMapBuilderSphere.h  RendererImage.h  RendererNormalMap.cpp  Tectonics.h  diff.cpp  diff.h
src/mapping/: AbstractMapWidget.cpp  AbstractMapWidget.h  CMakeLists.txt  CalenhadMapWidget.cpp  CalenhadMapWidget.h  CubicSpline.cpp  Curve.cpp  Curve.h  Graticule.cpp  Graticule.h  Raster.cpp  Raster.h  RenderPoint.h  Statistics.cpp  Statistics.h  TerraceCurve.cpp  Viewport.cpp  Viewport.h
src/messages/: CMakeLists.txt  QNotification.cpp  QNotification.h  QNotificationHost.cpp  QProgressNotification.cpp  QProgressNotification.h
src/module/: AltitudeMap.cpp  AltitudeMap.h  CMakeLists.txt  Cache.cpp  Cache.h  Convolution.cpp  Convolution.h  ConvolutionKernel.cpp  ConvolutionKernel.h  CubeRasterConfig.cpp  CubeRasterConfig.h  CubeRasterDialog.cpp  CubeRasterDialog.h  CubeRasterFile.cpp  CubeRasterFile.h  CubeRasterModule.cpp  CubeRasterModule.h  FractalGridModule.cpp  FractalGridModule.h  IcosphereModule.cpp  IcosphereModule.h  Map.cpp  Map.h  Module.cpp  Module.h  Node.cpp  Node.h  NodeGroup.cpp  NodeGroup.h  ParamValidator.h  Procedure.cpp  Procedure.h  RasterFileModule.cpp  RasterFileModule.h  RasterModule.cpp  RasterModule.h  StructuredGrid.cpp  StructuredGrid.h  Tectonics.cpp  Tectonics.h  (+2 more)
src/modules/: CMakeFindDependencyMacro.cmake  CheckCXXSourceCompiles.cmake  FindGMIC.cmake  FindGeographicLib.cmake  FindLibNoise.cmake  FindQwt.cmake  Findlibs2.cmake  LibFindMacros.cmake
src/nodeedit/: CMakeLists.txt  Calenhad.cpp  Calenhad.h  CalenhadController.cpp  CalenhadController.h  CalenhadToolBar.h  CalenhadView.cpp  CalenhadView.h  Connection.cpp  Connection.h  EditableLabel.cpp  NodeBlock.cpp  NodeBlock.h  NodeNameValidator.cpp  Port.cpp  Port.h  PortNameValidator.cpp  ProjectPropertiesDialog.h  Toolbox.cpp  ui_qnemainwindow.h
src/pipeline/: CMakeLists.txt  CalenhadModel.cpp  CalenhadModel.h  ModuleFactory.cpp  ModuleFactory.h
src/preferences/: CMakeLists.txt  PreferencesService.h  preferences.cpp  preferences.h
src/resources/: calenhad.conf  complexplanet.cpp  darkorange.css  legends.xml  modules.xml  resources.qrc
test/: CMakeLists.txt  IcosphereTest.cpp  IcosphereTest.h  LegendTest.cpp  LegendTest.h  ProjectionTest.cpp  ProjectionTest.h  QTestSuite.cpp  QTestSuite.h  geoutilstest.cpp  icospheretest.cpp  icospheretilesourcetest.cpp  legendtest.cpp  test.cpp  test.h  vertextest.cpp
(+6375 files in other folders)
